# ProgrammingExercises

./: 002.py  Utilities.py
AWSLambda/Test/: Dockerfile  app.py  pyproject.toml
CS107/: .gitattributes  README
CS107/lecture_02/: rsg  rsg.cc
CS107/lecture_04/: imdb-test  imdb-test.cc  imdb-utils.h  imdb.cc  imdb.h  six-degrees  six-degrees.cc
CS107/lecture_06/: concat.cpp  test.c
CS107/lecture_07/: hashset-test  hashset.c  hashset.h  thesaurus-lookup  vector-test  vector.c  vector.h
CS107/lecture_11/: Makefile
CSS/fan_out/: index.html
Cpp/: a.out  bases.cpp  bsearch.cpp  endian.cpp  swap.cpp  types.cpp
DailyProgrammer/: 342_hard.py  342_hard_varlength.py  343_easy.py  344_easy.py  344_intermediate.csv  344_intermediate.py  346_easy.py  346_intermediate.cpp  347_easy.py  347_hard.py  347_hard_map1.csv  347_hard_map2.csv  347_hard_map3.csv  347_intermediate.py  348_easy.py  348_hard.py  348_intermediate.py  349_easy.cpp  349_hard.py  349_hard.txt  349_intermediate.cpp  350_easy.cpp  351_hard.py  351_hard.txt
Docker/Docker101/: Dockerfile  docker-compose.yml
Docker/DockerTutorial/: Dockerfile  presentation.md
ECS/: Dockerfile  README.md  index.html  pyproject.toml
FineTuneLLM/: README  pyproject.toml
HTMX/: index.py  justfile  output.css  package-lock.json  pyproject.toml  start_tailwind.sh  tailwind.config.js
HTMX/assets/css/: output.css
HTMX/grid/: main.html  router.py
HTMX/slot_machine/: main.html  router.py  server.py
HTMX/small_apps/grid/: main.html
HTMX/small_apps/minefield/: main.html  router.py
HTMX/tutorial_slides/: README.md  justfile  main.py  package-lock.json  pyproject.toml  tailwind.config.js
HTMX/tutorial_slides/templates/slides/: 1.html
HTMX/tutorial_slides/templates/slides/slides/: slide_layout.html
Haskell/: first_functions.hs
HuggingFaceTransformersTutorial/: pyproject.toml
HuggingFaceTransformersTutorial/scripts/: chapter_1_3.py  chapter_2_2.py  chapter_2_3.py  chapter_2_4.py  chapter_2_5.py  chapter_3_1.py  chapter_3_2_problem.py  chapter_3_3.py  chapter_3_4.py  chapter_4_3.py
Jinja/: main.py  pyproject.toml
Jinja/templates/: message.txt  results.html
Julia/: 001.jl  INDEX
Lua/: README.md  factorial_function.lua
MachineLearning/: 001.py  002.py  003.py  004.py  005.py  INDEX
Misc/: soccer.py  vending_machine.py
OpenCV/: 001.py  INDEX
Outlines/: README.md  main.py  pyproject.toml
P5JS/: 001.js  002.js  003.html  003.js  004.html  004.js  005.html  005.js  INDEX  index.html
PreMake/: hello.c  premake5.lua
ProjectEuler/: 001.py
Python/: generator.py
RabbitMQ/: send.py
Raytracer/: main.py  pyproject.toml  test_raytracing.py  torch_bool_operators.py
Rust/: README.md
RustDataPipeline/: README  processor_struct.rs  slack_alert.rs
SQLAlchemyTutorial/: pyproject.toml
SQLAlchemyTutorial/sqlalchemytutorial/: tutorial.py
Sapling/: bar.txt  baz.txt
Threading/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  README
TypeChecking/: test_callable.py  test_newtype.py  test_simple.py  test_typing.py
hoc/: simple_neuron.hoc
javascript.info/: alert_prompt_confirm.html  function_basics_pow.html  hello_world_show_alert_external_script.html  if_else.html  variables.html
(+109 files in other folders)
