[project]
name = "HTMX"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "uvicorn>=0.30.5",
    "pydantic>=2.8.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
