[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = [
    "datasets>=2.15.0",
    "evaluate>=0.4.1",
    "transformers>=4.36.1",
    "pytest>=7.4.3",
    "torch>=2.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

