[tool.poetry]
name = "sqlalchemytutorial"
version = "0.1.0"
description = ""
authors = ["Matt Zhang <set.stun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
